Fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@ body, .App {
 body {
   margin: 0;
   background-color: #f4f4f4;
+  overflow-x: hidden;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 .App {
